# vigilant-canine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  PACKAGING_SUMMARY.md  README.md  build.sh  vigilant-canine.spec
.github/ISSUE_TEMPLATE/: bug_report.md
benchmarks/: CMakeLists.txt  hash_bench.cpp
config/: policy.toml.example  user-config.toml.example  vigilant-canine.toml.example
debian/: changelog  control  copyright  rules  vigilant-canine-api.install  vigilant-canine.install  vigilant-canine.postinst  vigilant-canine.postrm
docs/: api.md  architecture.md  configuration.md  installation.md  schema.sql  troubleshooting.md  user-monitoring.md
docs/plans/: api-daemon-plan.md  cow-friendly-databases.md  database-retention.md  distributed-scanner-plan.md  home-directory-monitoring-plan.md  packaging-plan.md  phase1-file-integrity-daemon.md  phase2-log-analysis-plan.md  remaining-work-plan.md  systemd-integration-plan.md
packaging/: README.md  build-deb.sh  build-rpm.sh  verify-packaging.sh
scripts/: test-api.sh
src/api/: http_server.cpp  http_server.h  main.cpp
src/api/handlers/: alert_handler.cpp  alert_handler.h  baseline_handler.cpp  baseline_handler.h  event_handler.cpp  event_handler.h  health_handler.cpp  health_handler.h
src/api/serialization/: json.cpp  json.h
src/audit/: audit_fields.h  audit_monitor.cpp  audit_monitor.h  audit_parsing.cpp  audit_parsing.h  audit_rule.cpp  audit_rule.h
src/baseline/: strategy.cpp  strategy.h
src/config/: config.cpp  config.h
src/core/: hash.cpp  hash.h  types.h
src/correlation/: correlation_engine.cpp  correlation_engine.h
src/daemon/: daemon.cpp  daemon.h  main.cpp
src/dispatch/: alert_dispatcher.cpp  alert_dispatcher.h
src/distro/: detector.cpp  detector.h
src/events/: event.cpp  event.h  event_bus.cpp  event_bus.h
src/journal/: journal_fields.h  journal_monitor.cpp  journal_monitor.h  journal_rule.cpp  journal_rule.h
src/monitor/: fanotify_monitor.cpp  fanotify_monitor.h
src/notify/: dbus_notifier.cpp  dbus_notifier.h
src/package/: package_verifier.cpp  package_verifier.h
src/policy/: policy_engine.cpp  policy_engine.h
src/power/: power_monitor.cpp  power_monitor.h
src/scanner/: distributed_scanner.cpp  distributed_scanner.h  scanner.cpp  scanner.h
src/storage/: alert_store.cpp  alert_store.h  audit_event_store.cpp  audit_event_store.h  baseline_store.cpp  baseline_store.h  database.cpp  database.h  journal_event_store.cpp  journal_event_store.h  scan_store.cpp  scan_store.h  schema.h
src/user/: user_manager.cpp  user_manager.h
systemd/: README.md  vigilant-canine.conf  vigilant-canined-api.service  vigilant-canined.service
tests/: CMakeLists.txt
tests/audit/: CMakeLists.txt  audit_monitor_test.cpp  audit_parsing_test.cpp  audit_rule_test.cpp
tests/baseline/: CMakeLists.txt  strategy_test.cpp  strategy_test[1]_include.cmake  strategy_test[1]_tests.cmake
tests/config/: CMakeLists.txt  config_merge_test.cpp  config_test.cpp  config_test[1]_include.cmake  config_test[1]_tests.cmake  policy_config_test.cpp
tests/core/: CMakeLists.txt  hash_test.cpp  hash_test[1]_include.cmake  hash_test[1]_tests.cmake
tests/correlation/: CMakeLists.txt  correlation_engine_test.cpp
tests/dispatch/: CMakeLists.txt  alert_dispatcher_test.cpp
tests/distro/: CMakeLists.txt  detector_test.cpp  detector_test[1]_include.cmake  detector_test[1]_tests.cmake
tests/events/: CMakeLists.txt  event_bus_test.cpp  event_bus_test[1]_include.cmake  event_bus_test[1]_tests.cmake
tests/journal/: CMakeLists.txt  journal_monitor_test.cpp  journal_rule_test.cpp
tests/monitor/: CMakeLists.txt  fanotify_monitor_test.cpp  fanotify_monitor_test[1]_include.cmake  fanotify_monitor_test[1]_tests.cmake
tests/notify/: CMakeLists.txt  dbus_notifier_test.cpp
tests/package/: CMakeLists.txt  package_verifier_test.cpp
tests/policy/: CMakeLists.txt  policy_engine_test.cpp
tests/power/: CMakeLists.txt  power_monitor_test.cpp
tests/scanner/: CMakeLists.txt  distributed_scanner_test.cpp  scanner_test.cpp  scanner_test[1]_include.cmake  scanner_test[1]_tests.cmake  user_scanner_test.cpp
tests/storage/: CMakeLists.txt  alert_store_test.cpp  database_test.cpp  database_test[1]_include.cmake  database_test[1]_tests.cmake  journal_event_store_test.cpp  scan_store_test.cpp
tests/user/: CMakeLists.txt  user_manager_test.cpp
vigilant-canine-cli/: Cargo.toml
vigilant-canine-daemon/: Cargo.toml
vigilant-canine-gui/: Cargo.toml
