# Test configuration

# Create test directory structure
add_subdirectory(core)
add_subdirectory(config)
add_subdirectory(storage)
add_subdirectory(distro)
add_subdirectory(baseline)
add_subdirectory(scanner)
add_subdirectory(events)
add_subdirectory(monitor)
add_subdirectory(dispatch)
add_subdirectory(policy)
add_subdirectory(package)
add_subdirectory(journal)
add_subdirectory(correlation)
add_subdirectory(notify)
add_subdirectory(audit)
